# taskflow

./: .gitignore  New Recording.m4a  README.md  SLACK-SUMMARY.md  index.html  package-lock.json  package.json
.copilot/prompts/: BUG-EXIT-TEXTAREA-PREPOPULATE-TASK.md  BUG-NOTES-MARKDOWN-AND-DASHBOARD-TOGGLE-TASK.md  BUG-OLLAMA-CACHE-TASK.md  BUG-TAURI-PARAM-NAMING-TASK.md  BUG-TEMPLATES-PATH-TASK.md  TASK-COMPLETION-CAPTURE-A-TASK.md
.github/: PLAN.md  copilot-instructions.md  handover-notes.md
.github/PROMPTS/: completion.md  dev-agent.md  pm-prompt-engineer.md
.github/TASKS/: ADDITIONAL-TEMPLATES-TASK.md  BUG-BOOKMARK-NOT-READ-ON-SUBMIT-TASK.md  BUG-COMPLETION-LOG-SECTION-INSERT-TASK.md  BUG-DISCARD-TODO-MOVES-TO-DONE-TASK.md  BUG-EXIT-TEXTAREA-PREPOPULATE-TASK.md  BUG-NOTES-MARKDOWN-AND-DASHBOARD-TOGGLE-TASK.md  BUG-OLLAMA-CACHE-TASK.md  BUG-PAUSE-FLOW-TRANSITION-TASK.md  DAILY-LOG-V2-TASK.md  (+30 more)
scripts/: slack-morning-summary-cloud.mjs  slack-morning-summary.mjs
src/: app.js  dashboard.js  exit-flow.js  logic.js  styles.css  transcription-editor.js  voice-capture.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  state.rs  tray.rs
src-tauri/src/commands/: agent_context.rs  audio.rs  daily_log.rs  jira.rs  lessons.rs  llm.rs  mod.rs  task.rs  templates.rs  timers.rs  todos.rs  vocabulary.rs  window.rs
src-tauri/src/helpers/: config.rs  corrections.rs  markdown.rs  mod.rs  vocabulary.rs
templates/: _schema.yaml  bug-investigation.yaml  code-review.yaml  investigation.yaml  pr-amends.yaml
(+31 files in other folders)
